# ASTDiffCrawler

./: .gitignore  README.md  pyproject.toml
src/: scrapy.cfg
src/astcrawler/: __init__.py  __main__.py  astcrawler.py  settings.py
src/astcrawler/spiders/: __init__.py  astdiff_spider.py
